# ml-gbc

./: .flake8  .gitignore  README.md  pyproject.toml
configs/captioning/: default.yaml  llava_yoloworld.yaml
configs/generation/: graph_transform_ex.yaml  t2gbc_default.yaml
configs/processing/: clip_filtering.yaml  compute_all_scores.yaml  compute_clip_scores.yaml  compute_toxicity_scores.yaml  relation_composition_filtering.yaml  to_structured_text.yaml
prompts/captioning/: query_composition.txt  query_entity.txt  query_image.txt  query_relation.txt  system_composition.txt  system_entity.txt  system_image.txt  system_relation.txt
prompts/t2i/: banana_apple.yaml  banana_apple_graph_only.yaml  dog_cat_ref_image.yaml  dog_cat_ref_image_graph_only.yaml  living_room.yaml  living_room_graph_only.yaml  neg_default.yaml  person_graph_only.yaml  t2gbc_seed.txt  t2gbc_seed.yaml  t2gbc_seed_with_entity_specification.yaml
scripts/captioning/: run_gbc_captioning.py
scripts/generation/: gbc2i.py  t2gbc.py  t2gbc2i.py
scripts/processing/: process_gbc.py
scripts/setup/: download_llava_models.py  download_yolo_world_models.py  setup_llava_query.sh  setup_yolo_world_detection.sh
src/gbc/: utils.py
tests/test_captioning_unit/: test_auto_image_entity_actions.py  test_captioning_pipeline.py  test_captioning_pipeline_functional.py  test_detection_action.py  test_detection_grounding_dino.py  test_detection_yolo_world.py  (+3 more)
viewer/: .gitignore  README.md  config.js  index.html  main.js  package-lock.json  package.json  style.css  utils.js  vis-settings.js  vite.config.js
(+109 files in other folders)
